# OOP-Workshops

Exercises/week 03/: readme.md
WS01/: CMakeLists.txt  readme.md
WS01/part 1/: monday.txt  sample_output.txt  w1_p1.cpp
WS01/part 2/: event.cpp  event.h  reflect.txt  sample_output.txt  tuesday.txt  w1_p2.cpp
WS02/: readme.md
WS02/part 1/: StringSet.cpp  StringSet.h  TimedEvents.cpp  TimedEvents.h  sample_output.txt  w2_p1.cpp
WS02/part 2/: CMakeLists.txt  StringSet.cpp  StringSet.h  TimedEvents.cpp  TimedEvents.h  reflect.txt  sample_output.txt  w2_p2.cpp
WS03/: CMakeLists.txt  readme.md
WS03/part 1/: Collection.h  Pair.cpp  Pair.h  sample_output.txt  w3_p1.cpp
WS03/part 2/: Collection.h  Pair.cpp  Pair.h  Set.h  reflect.txt  sample_output.txt  w3_p2.cpp
WS04/: CMakeLists.txt  readme.md
WS04/part 1/: Toy.cpp  Toy.h  sample_output.txt  w4_p1.cpp
WS04/part 2/: Child.cpp  Child.h  ConfirmOrder.cpp  ConfirmOrder.h  Toy.cpp  Toy.h  reflect.txt  sample_output.txt  w4_p2.cpp
WS05/: readme.md
WS05/part 1/: Book.cpp  Book.h  CMakeLists.txt  sample_output.txt  scrap.txt  w5_p1.cpp
WS05/part 2/: Book.h  CMakeLists.txt  Collection.cpp  Collection.h  Movie.cpp  Movie.h  SpellChecker.cpp  SpellChecker.h  books.txt  movies.txt  sample_output.txt  w5_p2.cpp
WS06/part 1/: CMakeLists.txt  College.cpp  College.h  Employee.cpp  Employee.h  Utilities.cpp  Utilities.h  (+1 more)
WS06/part 2/: CMakeLists.txt  College.cpp  College.h  Employee.cpp  Employee.h  Person.h  Professor.cpp  Professor.h  Student.cpp  Student.h  Utilities.cpp  Utilities.h  reflect.txt  w6_p2.cpp
(+125 files in other folders)
